@@ -1,3 +1,9 @@
+Thu Sep 11 21:24:57 2014  fox
+
+     174* src/fcterm.c
+          src/group.c
+          Do synchronous call to XConfigureWindow.
+
 Wed Sep 10 22:54:06 2014  fox
 
      173* include/fcterm.h
